Example/Server/Errors/IDisplayableError.cs

namespace BreadTh.ChainRail.Example.Server.Errors;

public interface IDisplayableServerError : IError
{ }